[package]
name = "chain"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[dependencies]
rand = "0.7"
rustc-hex = "2"
heapsize = "0.4"
rayon = "1.0"
serde = { version = "1.0", features = ["derive"]}
serde_derive = "1.0"
crossbeam = "0.7.3"

bitcrypto = { path = "../crypto" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
serialization_derive = { path = "../serialization_derive" }

[features]
default = []
test-helpers = []
